fix lr button overlap

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -128,7 +128,7 @@
         opacity: 0;
         position: absolute;
         top: 1.75em;
-        left: 1em;
+        left: 82%;
     }
     div.rightButton:hover {
         opacity: 0;
